info: Fix total disc size for btrfs subvolumes

Total disc size may be wrong if something like btrfs subvolumes are
used. Do not count multiple mounts with same device_path, because
it is probably something like btrfs subvolume. Use only the first one
in order to count the real size.

https://bugzilla.gnome.org/show_bug.cgi?id=708786